other-mpol/prepend-image-registry/.kyverno-test/already-prefixed-patched.yaml
apiVersion: v1
kind: Pod
metadata:
  name: already-prefixed
spec:
  containers:
  - name: app
    image: registry.io/already/app:1.0
