other-mpol/prepend-image-registry/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: prepend-image-registry
policies:
- ../prepend-image-registry.yaml
resources:
- resource.yaml
- resourceFailed.yaml
- withoutinitcontainer.yaml
- already-prefixed.yaml
results:
- kind: Pod
  patchedResources: patchedResource.yaml
  policy: prepend-registry
  resources:
  - myfailedpod
  result: pass
  isMutatingPolicy: true
- kind: Pod
  patchedResources: patchedResource.yaml
  policy: prepend-registry
  resources:
  - withoutinitcontainer
  result: pass
  isMutatingPolicy: true
- kind: Pod
  patchedResources: patchedResource.yaml
  policy: prepend-registry
  resources:
  - mypod
  result: pass
  isMutatingPolicy: true
- kind: Pod
  patchedResources: already-prefixed-patched.yaml
  policy: prepend-registry
  resources:
  - already-prefixed
  result: pass
  isMutatingPolicy: true
